    function takes one or two arguments (solaris).
  * runit.c: fallthrough stage 3: re-get stderr; sync() before reboot().
  * uw_tmp.h1, uw_tmp.h2, tryuwtmp.c, tryuwtmpx.c: new; test for utmpx or
    utmp support.
  * utmpset.c: support systems with utmp or utmpx (solaris).
  * Makefile: adapt.
  * supports the solaris platform (thx Uffe Jakobsen).

runit 0.11.2
Tue, 23 Sep 2003 10:15:32 +0200
  * doc/useinit.html, etc/macosx/StartupItems/runit: don't use /etc/runit/2
    when using runit service supervision with traditional init, use
    /sbin/runsvdir-start instead.
  * fmt_ptime.c: calculate UTC localtime correctly.
  * runsv.c: support ./supervise as symbolic link, on dangling symlink create
    link target.

runit 0.11.1
Thu,  4 Sep 2003 11:51:02 +0200
  * src/Makefile: add dependency to sysdeps to target fmt_ptime.o (thx Thomas
    Schwinge).
  * svlogd.c: barf if all log directories given at the command line fail.
  * man/svlogd.8: adapt.
  * doc/runscripts.html: adaptions (thx Erich Schubert, Lang Martin).

runit 0.11.0
Fri, 08 Aug 2003 12:37:14 +0200
  * uidgid.c, uidgid.h: new; get uid/gid by name.
  * chpst: new; run program with a changed process state (includes envdir,
    envuidgid, pgrphack, setlock, setuidgid, softlimit functionality).
  * setuidgid.c: remove; obsolete (replaced by chpst).

runit 0.10.0
Sun, 22 Jun 2003 20:44:58 +0200
  * doc/index.html, doc/install.html, doc/replaceinit.html, doc/useinit.html:
    how to install and configure runit on MacOSX.
  * svlogd.c: typo; fix incorrect handling of processor's state file; minor
    code cleanup; correctly calculate size for all types of timestamps.
  * runit-init.c: exit 0 on wrong usage.
  * package/versions: new.

runit 0.9.5
Tue, 17 Jun 2003 10:48:10 +0200
  * runit.c: use select() on systems that don't provide poll().
  * svlogd.c: reset match flag in lineflush() in all cases.
  * Makefile: build setuidgid in default target.