@@ -3,4 +3,4 @@
 PATH=/command:/usr/local/bin:/usr/local/sbin:/bin:/sbin:/usr/bin:/usr/sbin:/usr/X11R6/bin
 
 exec env - PATH=$PATH \
-runsvdir /service 'log: ...........................................................................................................................................................................................................................................................................................................................................................................................................'
+runsvdir /var/service 'log: ...........................................................................................................................................................................................................................................................................................................................................................................................................'
