@@ -7,10 +7,10 @@ LAST=0
 test -r /etc/runit/reboot && LAST=6
 
 echo 'Waiting for getties to stop...'
-svwaitdown -xk -t14 /service/getty-*
+svwaitdown -xk -t14 /var/service/getty-*
 
 echo 'Waiting for services to stop...'
-svwaitdown -xk -t350 /service/*
+svwaitdown -xk -t350 /var/service/*
 
 echo 'Shutdown...'
 /etc/init.d/rc $LAST
