@@ -4,7 +4,7 @@ exec 2>&1
 PATH=/command:/sbin:/bin:/usr/sbin:/usr/bin
 
 echo 'Waiting for services to stop...'
-svwaitdown -xk -t350 /service/*
+svwaitdown -xk -t350 /var/service/*
 
 echo 'Shutdown...'
 if test -x /etc/runit/reboot; then
