@@ -27,13 +27,13 @@ with a symlink pointing to
 .IR dir .
 .P
 Normally 
-.I /service
+.I /var/service
 is a symlink to
 .IR current ,
 and
 .BR runsvdir (8)
 is running
-.IR /service .
+.IR /var/service .
 .SH EXIT CODES
 .B runsvchdir
 prints an error message and exits 111 on error.
