@@ -90,10 +90,7 @@ runit-init(8),
 svlogd(8),
 svwaitdown(8),
 svwaitup(8),
-readproctitle(8),
-svscan(8)
 .P
- http://smarden.org/runit/
- http://cr.yp.to/daemontools.html
+http://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
